--- a/C-Index.ipynb
+++ b/C-Index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ac82c26-0b25-4ee1-9c58-c63245456730",
    "metadata": {},
    "outputs": [
@@ -280,6 +280,27 @@
     "        print(row)\n",
     "    print(\"-\" * 95 + \"\\n\")\n",
     "\n",
+    "\n",
+    "# --- NEW FUNCTION TO GENERATE A FULL TABLE FOR ONE PAPER ---\n",
+    "def generate_full_paper_report(pub_id, df):\n",
+    "    \"\"\"\n",
+    "    Finds every author on a given paper and generates a D-Index report for each one.\n",
+    "    This is used to create comprehensive summary tables.\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n\\n{'='*45}\")\n",
+    "    print(f\" Full D-Index Report for All Authors on: {pub_id}\")\n",
+    "    print(f\"{'='*45}\\n\")\n",
+    "\n",
+    "    authors_on_paper = collectAuthorsOfOnePaper(df, pub_id)\n",
+    "\n",
+    "    if not authors_on_paper:\n",
+    "        print(f\"No authors found for {pub_id} or paper does not exist.\")\n",
+    "        return\n",
+    "\n",
+    "    for author in authors_on_paper:\n",
+    "        generate_comparison_report(author, df)\n",
+    "\n",
+    "\n",
     "# ==============================================================================\n",
     "# MAIN EXECUTION\n",
     "# ==============================================================================\n",
@@ -317,8 +338,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "75abe98b-1c43-4330-b08c-d293ea4e5900",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "=======================================================\n",
+      " PART 2: Generating a Full Report for Every Author on a Specific Paper\n",
+      "=======================================================\n",
+      "\n",
+      "\n",
+      "\n",
+      "=============================================\n",
+      " Full D-Index Report for All Authors on: pub.1123345821\n",
+      "=============================================\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: Adam Smith (Healthcare)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 28\n",
+      "Overall D-Index (With New Author Bonus): 30\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         1.96 |           26.40 |             9.43 |           37.79 <- Bonus Applied\n",
+      "pub.1319112586    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "pub.0540609372    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: Emily Johnson (Computer Science)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 28\n",
+      "Overall D-Index (With New Author Bonus): 30\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         1.96 |           26.40 |             9.43 |           37.79 <- Bonus Applied\n",
+      "pub.1319112586    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "pub.0540609372    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: Robert Brown (Engineering)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 26\n",
+      "Overall D-Index (With New Author Bonus): 28\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         1.96 |            5.74 |            26.40 |           34.10 <- Bonus Applied\n",
+      "pub.1319112586    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "pub.0540609372    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: Maria Garcia (Social Science)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 28\n",
+      "Overall D-Index (With New Author Bonus): 33\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         1.96 |           26.40 |            26.40 |           54.76 <- Bonus Applied\n",
+      "pub.3708184030    |         1.89 |           21.60 |             4.70 |           28.19 <- Bonus Applied\n",
+      "pub.1319112586    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "pub.0540609372    |         1.50 |           12.00 |            12.00 |           25.50 \n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: David Williams (Healthcare)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 18\n",
+      "Overall D-Index (With New Author Bonus): 23\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         2.37 |            7.83 |            12.86 |           23.05 <- Bonus Applied\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "D-Index Comparison Report for: Sophia Davis (Computer Science)\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "Overall D-Index (No Bonus): 18\n",
+      "Overall D-Index (With New Author Bonus): 23\n",
+      "\n",
+      "Detailed Breakdown (Displaying values with bonus applied):\n",
+      "Pub ID            |       Gender |     Nationality |   Specialization |     Paper Index\n",
+      "---------------------------------------------------------------------------------------\n",
+      "pub.1123345821    |         2.37 |            7.83 |            12.86 |           23.05 <- Bonus Applied\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- PART 2: Generate a full summary table for every author on a single paper ---\n",
+    "print(\"\\n\\n\" + \"=\"*55)\n",
+    "print(\" PART 2: Generating a Full Report for Every Author on a Specific Paper\")\n",
+    "print(\"=\"*55 + \"\\n\")\n",
+    "\n",
+    "# You can change this ID to any paper you want to analyze\n",
+    "target_pub_id_for_full_report = \"pub.1123345821\"\n",
+    "generate_full_paper_report(target_pub_id_for_full_report, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a8706a-0212-420c-901a-0461a63582c6",
    "metadata": {},
    "outputs": [],
    "source": []
